<resources>
    <string name="app_name">SuperSub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="team">Team</string>
    <string name="matches">Matches</string>
    <string name="formations">Formations</string>
    <string name="settings">Settings</string>
    <string name="other_actions">Other Actions</string>
    <string name="exit_team">Exit Team</string>
    <string name="team_list">Team List</string>
    <string name="your_teams">Your Teams</string>
    <string name="edit">Edit</string>
    <string name="upcoming">Upcoming</string>
    <string name="previous">Previous</string>
    <string name="set_up_match">Set Up Match</string>
    <string name="edit_match">Edit Match</string>
    <string name="start_match">Start Match</string>
    <string name="view_all_matches">View All Matches</string>
    <string name="create_single_match">Create Single Match</string>
    <string name="cancel">Cancel</string>
    <string name="set_up_multiple_matches_at_once">Set Up Multiple Matches At Once</string>
    <string name="opponent_team_name_optional">Opponent Team Name (Optional)</string>
    <string name="date">Date</string>
    <string name="time_optional">Time (Optional)</string>
    <string name="match_duration_optional">Match Duration (Optional)</string>
    <string name="minutes">minutes</string>
    <string name="player_count">Player Count:</string>
    <string name="a_side_including_goalkeeper">a side (including goalkeeper)</string>
    <string name="plus_new_team">+ New Team</string>
    <string name="plus_create_match">+ Create Match</string>
    <string name="default_formations">Default Formations</string>
    <string name="custom_formations">Custom Formations</string>
    <string name="manual_save">Manual Save</string>
    <string name="manual_save_warning">The manual save button should be used to save all data if you expect that this app may not be closed properly or to save important changes just in case. This button will be removed once the app is updated to use a database system for storing data.</string>
    <string name="matches_not_available">Live match, match management and match statistics will be available later.</string>
    <string name="view_and_manage_team">View and Manage Team</string>
    <string name="members">Members</string>
    <string name="statistics">Statistics</string>
    <string name="create_team">Create Team</string>
    <string name="team_name">Team Name</string>
    <string name="season">Season</string>
    <string name="description">Description</string>
    <string name="team_color">Team Color</string>
    <string name="enter_all_required_fields">Enter All Required Fields</string>
    <string name="match_events">Match Events</string>
    <string name="plus_create_new_match_event">+ Create New Match Event</string>
    <string name="match_event_warning">Match events will be removed once live matches are added in a future update. Player statistics (goals, assists, bookings and etc.) that were added using match events will remain even after match events are removed.</string>
    <string name="no_players">There are no players in your team. Go to the team page to add players.</string>
    <string name="greyed_out_buttons_warning">The greyed out buttons are placeholders for pages that will be added in a future update.</string>
    <string name="profile">Profile</string>
    <string name="players">Players</string>
    <string name="add_player">Add Player</string>
    <string name="remove_players">Remove Players</string>
    <string name="edit_player">Edit Player</string>
    <string name="remove_player">Remove Player</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="jersey_number">Jersey Number</string>
    <string name="positions">Positions</string>
    <string name="plus_add_player">+ Add Player</string>
    <string name="save_successful">Save Successful</string>
    <string name="match_event">Match Event</string>
    <string name="finish_match_event">Finish Match Event</string>
    <string name="goals">Goals</string>
    <string name="assists">Assists</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="red_cards">Red Cards</string>
    <string name="goals_less_than_0">Goals can\'t be less than 0</string>
    <string name="assists_less_than_0">Assists can\'t be less than 0</string>
    <string name="yellow_cards_less_than_0">Yellow cards can\'t be less than 0</string>
    <string name="red_cards_less_than_0">Red cards can\'t be less than 0</string>
    <string name="double_yellow_card">Double yellow card converted to red card</string>
    <string name="yellow_and_red_card">Can\'t have both a red card and yellow card</string>
    <string name="red_cards_more_than_1">A player can\'t have more than one red card in a single match</string>
    <string name="jersey_number_already_exists">A player already has this jersey number</string>
    <string name="team_saved">Team Saved</string>
    <string name="back">back</string>
    <string name="bookings">Bookings</string>
    <string name="top_scorer">Top Scorer</string>
    <string name="top_assister">Top Assister</string>
    <string name="player_must_have_jersey_number">Player must have a jersey number</string>
    <string name="who_assisted_this_goal">Who assisted this goal?</string>
    <string name="no_one_did">No one did</string>
    <string name="who_scored_from_this_assist">Who scored from this assist?</string>
    <string name="which_goal_assist_delete">Which goal and assist do you want to delete?</string>
</resources>