<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/nav_team"
            android:title="@string/team"/>
        <item
            android:id="@+id/nav_formations"
            android:title="@string/formations"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"/>
    </group>

    <item android:title="Other Actions">
        <menu>
            <item
                android:id="@+id/nav_switch_teams"
                android:title="@string/switch_teams"/>
            <item
                android:id="@+id/manual_save"
                android:title="@string/manual_save"/>
        </menu>
    </item>
</menu>