<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_layout_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TypeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_single_match"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            style="@style/TypeBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:drawableLeft="@drawable/ic_cancel"
            android:drawableTint="@color/red"
            android:text="@string/cancel"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        style="@style/TypeBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:drawableLeft="@drawable/ic_edit"
        android:drawableTint="@color/light_blue"
        android:text="@string/set_up_multiple_matches_at_once"
        android:textColor="@color/light_blue" />

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/opponent_team_name_optional" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/date" />

    <EditText
        android:id="@+id/et_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/time_optional" />

    <EditText
        android:id="@+id/et_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time" />

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/match_duration_optional" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_match_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes" />
    </LinearLayout>

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/player_count" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_a_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_side_including_goalkeeper" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/plus_create_match" />
</LinearLayout>