<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_player_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_layout_padding"
    tools:context=".ui.fragments.CreateTeamFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TypeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_player"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_add_player_cancel"
            style="@style/TypeBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:drawableLeft="@drawable/ic_cancel"
            android:drawableTint="@color/red"
            android:text="@string/cancel"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/et_add_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/et_add_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/jersey_number" />

    <EditText
        android:id="@+id/et_add_jersey_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="number"
        android:textColor="@color/black" />

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/positions" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_add_positions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        android:id="@+id/chip_add_position"
        layout="@layout/chip_position" />

    <Button
        android:id="@+id/button_add_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/plus_add_player" />
</LinearLayout>