<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_layout_padding"
    tools:context=".ui.fragments.CreateTeamFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            style="@style/TypeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_team"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_create_team_cancel"
            style="@style/TypeBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:drawableLeft="@drawable/ic_cancel"
            android:drawableTint="@color/red"
            android:text="@string/cancel"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/team_name" />

    <EditText
        android:id="@+id/et_team_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/season" />

    <EditText
        android:id="@+id/et_season"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/description" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <TextView
        style="@style/TypeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/team_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_color_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="R"
            android:inputType="number"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_color_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="G"
            android:inputType="number"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_color_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="B"
            android:inputType="number"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/button_add_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/plus_new_team" />
</LinearLayout>